# carcara

./: README.md  pyproject.toml
docs/source/: carcara.core.dataset_manager.rst  carcara.core.rst  carcara.core.trainer.rst  carcara.models.on-the-fly.rst  carcara.models.qbc.rst  carcara.models.rst  carcara.rst  carcara.sampler.molecular_dynamics.rst  carcara.sampler.monte_carlo.rst  carcara.sampler.random_displacements.rst  carcara.sampler.rst  carcara.sampler.stochastic_process.rst  conf.py  index.rst  installation.md  modules.bck  modules.rst
docs/source/_static/: custom.css
docs/source/quick_start/: generating_samples.md  index.md  splitting_datasets.md
docs/source/tutorial/: generating_samples.md  splitting_datasets.md
docs/source/usage/: generating_samples.md  index.md
notebooks/: 01_atoms_noise.ipynb
scripts/: __init__.py
src/carcara/: __init__.py  _version.py  atoms_noise.py  data_utils.py  dataset_manager.py  io.py  monte_carlo.py  on-the-fly.py  qbc.py  random_displacements.py  random_noise.py  stochastic_process.py  trainer.py  version.py
src/carcara/core/: dataset_manager.py  trainer.py
src/carcara/legacy/: data_utils.py  dataset_manager.py  random_noise.py
src/carcara/models/: on-the-fly.py  qbc.py
src/carcara/sampler/: molecular_dynamics.py  random_displacements.py  stochastic_process.py
test/: conftest.py  test_atoms_noise.py  test_dataset_manager.py  test_random_displacements.py  test_trainer.py
test/data/: my_data_15.xyz
test/data_test/: atomic_refs.xyz
tutorials/: 01_atoms_noise.ipynb  01_random_displacements.ipynb  02_dataset_manager.ipynb  03_trainer.ipynb  model_test.model  model_test_compiled.model  model_test_stagetwo.model  model_test_stagetwo_compiled.model  train_seed_876.xyz
tutorials/data/: noise_samples.xyz  test_seed_876.xyz
tutorials/data/splits/: test_seed_876.xyz  train_seed_876.xyz
