[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carcara"
version = "26.4.16"
authors = [
  { name="Leandro Seixas Rocha", email="leandro.rocha@ilum.cnpem.br" },
]
description = "For on-the-fly active learning of interatomic potentials."
readme = "README.md"
license = {file = "LICENSE"} 
requires-python = ">=3.10"
dependencies = [
    'numpy>=2.0.0',
    'pandas',
    'ase',
    'torch',
    'scipy',
    'matplotlib',
    'pytest',
    'pyyaml',
    'ml_dtypes',
    'mace-torch'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
"Homepage" = "https://github.com/seixas-research/carcara"
"Documentation" = "https://carcara.readthedocs.io/en/latest/"
# "Bug Tracker" = "https://github.com/seixas-research/carcara/issues"
